2008-05-10  Andres G. Aragoneses <aaragoneses@novell.com> 

	* CheckNewExceptionWithoutThrowingTest.cs,
	  CloneMethodShouldNotReturnNullTest.cs,
	  ConstructorShouldNotCallVirtualMethodsTest.cs,
	  CheckNewThreadWithoutStartTest.cs,
	  GetEntryAssemblyMayReturnNullTest.cs, Test.Rules.BadPractice.mdp,
	  ToStringReturnsNullTest.cs, DisableDebuggingCodeTest.cs: Update (to
	  fix build): somebody forgot to include the new namespace when
	  moving TestRunner.

2008-05-04  Sebastien Pouliot  <sebastien@ximian.com>

	* EqualShouldHandleNullArgTest.cs: Convert test cases to new 
	format. Add new test cases based on Mono BCL (old) false positives.

2008-04-23  Sebastien Pouliot  <sebastien@ximian.com>

	* DisableDebuggingCodeTest.cs: Adapt to change for Initialize 
	behavior. If a runner desactivate a rule then it should not 
	re-activate itself.

2008-03-07  Sebastien Pouliot  <sebastien@ximian.com>

	* DisableDebuggingCodeTest.cs: New. Unit tests for 
	DisableDebuggingCodeRule.
	* Test.Rules.BadPractice.mdp: Update MD project file.

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com>

	* CheckNewExceptionWithoutThrowingTest.cs
	* CheckNewThreadWithoutStartTest.cs
	* CloneMethodShouldNotReturnNullTest.cs
	* ConstructorShouldNotCallVirtualMethodsTest.cs
	* EqualShouldHandleNullArgTest.cs
	* GetEntryAssemblyMayReturnNullTest.cs
	* ToStringReturnsNullTest.cs
		Update unit tests wrt framework changes.

2008-01-30  Sebastien Pouliot  <sebastien@ximian.com>

	* CheckNewExceptionWithoutThrowingTest.cs: New. Unit tests by 
	Andreas Noever.
	* CheckNewThreadWithoutStartTest.cs: New. Unit tests by Andreas 
	Noever.

2008-01-24  Sebastien Pouliot  <sebastien@ximian.com>

	* EqualShouldHandleNullArgTest.cs: Changed my mind about "new" ;-)
	* ImplementingEqualsButNotGetHashCodeAndViceVersaTest.cs: Tests
	move (with rules) into Design since it affects the API.
	* ToStringReturnsNullTest.cs: Add a bunch of new test cases.

2008-01-23  Sebastien Pouliot  <sebastien@ximian.com>
